--- a/app/src/main/res/layout/item_layout_banner.xml
+++ b/app/src/main/res/layout/item_layout_banner.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="80dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/imageViewBanner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/commercial_banner" />
+        android:contentDescription="@string/commercial_banner"
+        android:scaleType="centerCrop"
+        tools:src="@drawable/banner" />
 
 </LinearLayout>
 
